<resources>
    <string name="app_name" translatable="false">НебесаТВ7</string>
    <string name="label" translatable="false">Небеса ТВ7</string>
    <string name="tv7_logo" translatable="false">TV7</string>
    <string name="toast_something_went_wrong" translatable="false">Something went wrong :-(</string>
    <string name="start_stream">Start</string>
    <string name="pause_start_stream">Pause/Start</string>
    <string name="arrows">Arrows</string>
    <string name="arrow">Arrow</string>
    <string name="error">Error</string>
    <string name="arrow_down">Arrow down</string>
    <string name="arrow_up">Arrow up</string>

    <string name="toolbar_text">Когда содержание имеет значение</string>
    <string name="exit_question">Закрыть приложение ТВ7</string>
    <string name="yes">OK</string>
    <string name="no">Отмена</string>
    <string name="coming_on_channel">Скоро на телеканале</string>
    <string name="today">Сегодня</string>

    <string name="net_tv">Веб-ТВ</string>
    <string name="archive">Видеоархив</string>
    <string name="guide">Телепрограмму</string>
    <string name="search">Поиск</string>
    <string name="favorites">Избранные</string>
    <string name="channel_info">Небеса ТВ7</string>
    <string name="about">Информация</string>

    <string name="we_recommend">Рекомендуемые</string>
    <string name="most_viewed">Самые популярные</string>
    <string name="newest">Новые</string>
    <string name="categories">Категории</string>
    <string name="category">Категория</string>
    <string name="series">Серия</string>
    <string name="topical_series">Текущая серия</string>

    <string name="first_broadcast">Первая трансляция</string>
    <string name="duration">Продолжительность</string>
    <string name="episode">Выпуск</string>
    <string name="aspect_ratio">Соотношение сторон</string>

    <string name="back">Обратно</string>
    <string name="do_search">Найти</string>
    <string name="clear">Стере́ть</string>
    <string name="search_results">Результаты поиска</string>

    <string name="no_hits">Ничего не найдено</string>
    <string name="no_favorites">Список Избранных пуст</string>
    <string name="added_to_favorites">Добавлено в Избранные</string>
    <string name="removed_from_favorites">Удалено из Избранных</string>

    <string name="app_package_title">App package:</string>
    <string name="app_version_title">App version:</string>
    <string name="os_version_title">OS version:</string>
    <string name="os_api_level_title">OS API level:</string>
    <string name="android_version_title">Android version:</string>
    <string name="device_title">Device:</string>
    <string name="model_and_product_title">Model (Product):</string>

    <string name="something_went_wrong">Something went wrong :-(</string>
    <string name="no_network_connection">No network connection :-(</string>
    <string name="network_request_failed">Network request failed :-(</string>
    <string name="network_request_timeout">Network request timeout :-(</string>
    <string name="restart">Restart</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="delete_configurations">Delete configurations</string>
    <string name="video_status">Video status</string>
    <string name="favorites_eng">Favorites</string>
    <string name="search_history">Search history</string>
    <string name="items">items</string>
    <string name="delete_configuration_question">Delete configuration?</string>

    <string name="title_1">О нас</string>
    <string name="title_1_chapter_1">«Heaven TV7» − всемирный, независимый от политики, телеканал. Мы стремимся выступать в качестве платформы для объединения христиан различных конфессий так, чтобы они могли учиться друг у друга и вместе составляли единое тело Иисуса Христа (Матфея 22:36-40).</string>
    <string name="title_1_chapter_2">С самого начала в основании деятельности «Heaven TV7» стоит Слово Божие. Телеканал руководствуется исполнением заповеди Иисуса Христа о распространении Евангелия по всему миру (Матфея 28:16-20). Своей работой мы утверждаем, что смерть Иисуса на Кресте открыла путь к спасению (Ефесянам 2:17-18).</string>
    <string name="title_1_chapter_3">В своей работе «Heaven TV7» основывается на христианской этике и морали (Исход 20:2-17).</string>

    <string name="title_2">История Mартти и Мирьи Oярес</string>
    <string name="title_2_chapter_1">Слово приветствия от основателя и исполнительного директора Мартти Oяреса:</string>
    <string name="title_2_chapter_2">«Хочу поделиться, как мы открыли христианский телеканал в Финляндии. Это видение Бог в 2003 году Бог дал мне и моей жене Мирье. Он хотел, чтобы мы открыли христианское телевидение и назвали его «Heaven TV7». На тот момент я только вышел на пенсию, оставив должность вице-президента «Sanoma News Oy» – крупнейшей финского журнального издания. Президент Финляндии наградил меня почетным званием в области работы всей моей жизни – коммуникации и средств массовой информации. И все, чего я ожидал от будущего – это спокойный отдых на пенсии. Но у Бога был совершенно другой план. Моя грандиозная карьера была только началом Его великого проекта.</string>

    <string name="title_3">«Taivas TV7» – центральный финский телеканал</string>
    <string name="title_3_chapter_1">Итак, 15 декабря 2003 года мы запустили первый христианский телеканал в Финляндии. В первые годы работы «Heaven TV7» единственное, что мы имели – это наше видение. У нас не было ни опыта работы в телевизионной сфере, ни достаточно финансов. Кроме того, мы находились в светском окружении, а государственная церковь все больше становилась либеральной.</string>
    <string name="title_3_chapter_2">Тем не менее, мы сосредоточились на нашем видении, а не на проблемах. Нам нужно было полностью полагаться на Бога. Он учил и продолжает учить и показывать, каких высот мы можем достигнуть, если движемся верой. На сегодняшний день наши программы доступны в каждом финском доме через кабельное телевидение или интернет.</string>

    <string name="title_4">«Taevas TV7» – эстонский телеканал</string>
    <string name="title_4_chapter_1">В 2009 году мы начали транслировать передачи также и в Эстонии. Сегодня команда «Taevas TV7» насчитывает 10 человек.</string>

    <string name="title_5">Студия в Израиле</string>
    <string name="title_5_chapter_1">В 2008 году мы построили студию в Иерусалиме, которая производит семь передач. Через них мы хотим распространять правдивую информацию об Израиле, тем самым благословляя еврейский народ.</string>

    <string name="title_6">«Himlen TV7» – шведский телеканал</string>
    <string name="title_6_chapter_1">В апреле 2013 года открылся шведский телеканал «Himlen TV7». Его центральной идеей стало достижение шведского и фино-шведского населения через библейские передачи, интервью, программы об Израиле, а также детский и молодежный контент».</string>

    <string name="title_7">«Небеса ТВ7» – телеканал на русском языке</string>
    <string name="title_7_chapter_1">Открытие «Небеса ТВ7» стало следующим долгожданным шагом в развитии всей сети «Heaven TV7». Генеральный директор Мартти Оярес уже давно размышлял о создании телеканала на русском языке. Однако, как и перед открытием каждого предыдущего канала, он ждал знак и откровение от Бога, когда именно наступит лучшее время для нового начала.</string>
    <string name="title_7_chapter_2">«В одной из наших с Мирьей поездок в Санкт-Петербург Бог четко подтвердил, что открытие русскоязычного телеканала — это Его воля. Но, на тот момент, я все еще не знал, когда именно нужно начинать работу над этим проектом» — рассказывает Мартти.</string>
    <string name="title_7_chapter_3">В сентябре 2015 года главный офис «Heaven TV7» посетила московская миссионерская группа, которая ежемесячно распространяет более миллиона экземпляров христианской литературы по всей России. Проводились переговоры с пастором русскоязычной церкви в Хельсинки, Андреем Хинконеном. Несмотря на различные встречи с русскоязычными христианами, Мартти все же не получал четкого слова от Бога о запуске работы телеканала.</string>
    <string name="title_7_chapter_4">Но одним ноябрьским утром Мартти Оярес получил подтверждение: «Я помню, как по обычаю сел за компьютер, чтобы проверить электронную почту и решить некоторые банковские вопросы. В тот момент я почувствовал, что именно сегодня мы должны начать подготовку к открытию и запуску русскоязычного телеканала. Нам больше не нужно было ждать, и мое сердце переполненила уверенность в этом.</string>
    <string name="title_7_chapter_5">Я сразу же рассказал эту новость Мирье, которая также переживала и молилась об этом шаге на протяжении всей осени. Мы пригласили на встречу Андрея Хинконена. Он согласился по возможности помогать каналу и с радостью порекомендовал нам Александра Бутенко как надежного человека на должность координатора нового русскоязычного телеканала — рассказывает Мартти. — С  ноября 2015 года мы начали подготовительную работу над новым русскоязычным телеканалом.</string>
    <string name="title_7_chapter_6">Координирование работы нового телеканала взял на себя христианин с большым опытом в области создания видео- и аудиоматериала — Александр Бутенко. В апреле 2016 года менеджером «Небеса ТВ7» был назначен один из сыновей генерального директора Мартти Ояреса — Рами Оярес. Создание нового телеканала оказалось довольно кропотливым делом. Наиболее трудоемким процессом стал поиск качественного контента и заключение договоров с медиапартнерами.</string>
    <string name="title_7_chapter_7">Ноябрь 2016 ознаменовался открытием студии перевода, дублирования и производства видео- и медиаконтента в Полтаве, Украина. А также было запущено вещание в сети Интернет.</string>
    <string name="title_7_chapter_8">В 2017 основана студия видеопроизводства в Ванадзоре, Армения. А в 2018 открыт офис по работе с программным обеспечением и начато производство видеоконтента в Киеве, Украина.</string>
    <string name="title_7_chapter_9">Несмотря на все трудности, с которыми сталкивается команда «Небеса ТВ7», и благодаря постоянным молитвам, работа продолжается. В создание и открытие телеканала «Небеса ТВ7» вложен большой труд, молитвы и посвящение многих людей.</string>
    <string name="title_7_chapter_10">«Heaven TV7» развивается очень быстро. На данный момент канал транслирует около 60% программ собственного производства, а финансирование практически полностью осуществляется благодаря частным пожертвованиям.</string>
    <string name="title_7_chapter_11">«Сейчас, более чем когда-либо, мир нуждается в христианских телеканалах, чтобы Евангелие распространялось до края земли. «Heaven TV7» нуждается в ваших молитвах и пожертвованиях, чтобы как можно лучше совершать труд, к которому призвал нас Бог.</string>
    <string name="title_7_chapter_12">Вы можете это делать вместе с нами! Иисус сказал: «Пойдите ко всем народам и сделайте их Моими учениками». У вас есть уникальная возможность выполнить это Великое поручение и стать частью Божьей мечты.</string>
    <string name="title_7_chapter_13">Ведь каждый христианин — миссионер на том месте, где находится.</string>
    <string name="title_7_chapter_14">До встречи в эфире! Пусть Бог обильно благословит вас!</string>
    <string name="title_7_chapter_15">С уважением, Мартти Оярес, основатель и генеральный директор «Heaven TV7».</string>

    <string name="copyright">Copyright © Небеса ТВ7. Unauthorized publication of programs or subtitles is prohibited.</string>
</resources>
